force-app/main/default/objects/Developer_Event__c/Developer_Event__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Event</label>
    <nameField>
        <displayFormat>DEV-EVENT-{00000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>