force-app/main/default/objects/Developer_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <formula>DATEVALUE( Event_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>