force-app/main/default/objects/Developer_Event__c/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <description>Number of hours</description>
    <inlineHelpText>Number of hours</inlineHelpText>
    <label>Event Duration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>