force-app/main/default/objects/Developer_Event__c/fields/Event_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_English_Name__c</fullName>
    <label>Event English Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>