force-app/main/default/objects/Developer_Event__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <description>Uniquely identifies an event</description>
    <externalId>true</externalId>
    <label>Event ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>