force-app/main/default/objects/Developer_Event__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <label>Event Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>