force-app/main/default/objects/Developer_Event__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Name of an event, can contain non-english characters.</description>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>