force-app/main/default/objects/Developer_Event__c/fields/Event_Owner__c.field-meta.xml
<CustomField>
    <fullName>Event_Owner__c</fullName>
    <label>Event Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>