force-app/main/default/objects/Developer_Event__c/fields/Event_SKU__c.field-meta.xml
<CustomField>
    <fullName>Event_SKU__c</fullName>
    <label>Event SKU</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>