force-app/main/default/objects/Developer_Event__c/fields/Event_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Event_Time_Zone__c</fullName>
    <label>Event Time Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>