force-app/main/default/objects/Developer_Event__c/fields/Hands_on_Component__c.field-meta.xml
<CustomField>
    <fullName>Hands_on_Component__c</fullName>
    <label>Hands on Component</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>