force-app/main/default/objects/Developer_Event__c/fields/Localization__c.field-meta.xml
<CustomField>
    <fullName>Localization__c</fullName>
    <label>Localization</label>
    <length>32</length>
    <type>Text</type>
</CustomField>