force-app/main/default/objects/Developer_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Event_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>NAME</columns>
    <columns>Event_SKU__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>