force-app/main/default/objects/Developer_Event__c/listViews/X2012_Webinars.listView-meta.xml
<ListView>
    <fullName>X2012_Webinars</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>Event_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>Webinar</value>
    </filters>
    <filters>
        <field>Event_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2012</value>
    </filters>
    <filters>
        <field>Event_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2012</value>
    </filters>
    <label>2012 Webinars</label>
    <language>en_US</language>
</ListView>